--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts --fix",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "GITHUB_WORKSPACE=__tests__ jest",
+    "test": "cross-env GITHUB_WORKSPACE=__tests__ jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
   },
   "repository": {
@@ -29,8 +29,9 @@
     "@actions/github": "^5.1.1",
     "@grpc/grpc-js": "^1.8.14",
     "@yandex-cloud/nodejs-sdk": "2.4.4",
-    "archiver": "^5.3.1",
+    "archiver": "5.3.1",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "glob": "^10.2.6",
     "long": "4.0.0",
     "minimatch": "9.0.1",
